# website-practice

./: README.md  app.py  forms.py  models.py  pyproject.toml
data/postgresqlite/: postgresqlite.json
data/postgresqlite/pgdata/: postgresql.conf  postmaster.opts  postmaster.pid
data/postgresqlite/pgdata/base/1/: 1247_vm  1249  1255  1255_vm  1259  14225  14230_vm  2579  2600_vm  2601_vm  2602_vm  2605_vm  2607_vm  2608  2609_vm  2610  2612_vm  2615  2615_vm  2617_vm  2618_vm  2619_fsm  2662  2666  2667  2675  2682  2684  2704  2753_vm  2836  2839  2840  2840_vm  3164  3394  3394_vm  3455  3600_vm  3603  (+4 more)
data/postgresqlite/pgdata/base/14396/: 1247  1249_vm  1259  1259_vm  2603_vm  2606  2606_vm  2608_vm  2609  2610_vm  2612  2616_vm  2618  2619_vm  2658  2659  2663  2664  2665  2673  2674  2678  2679  2693  2703  2836_vm  2837  2838  2838_fsm  2841  3079  3079_vm  3081  3085  3395  3601_vm  3603_vm  3604  3605  3764  (+1 more)
data/postgresqlite/pgdata/base/14397/: 1247  1247_vm  1249  1249_vm  1259  1259_vm  14215  14215_vm  14220  14220_vm  14224  14225_vm  14229  14230  14234  16384  16385  16389  16391  16393  16394  16398  16400  16413  16414  16419  16420  2224  2579  2604  2606  2606_vm  2608  2608_vm  2610  2610_vm  (+40 more)
data/postgresqlite/pgdata/global/: 1213_vm  1214  1214_vm  1260  1260_vm  1261  1261_vm  1262  1262_vm  2396  2396_vm  2397  2671  2672  pg_control  pg_internal.init
data/postgresqlite/pgdata/pg_stat_tmp/: db_0.stat  db_14397.stat  global.stat
static/: form.css
templates/: .gitignore  base.html  dashboard.html  form.html  login.html  login_sent.html
